# Insure-AI

./: README.md
client/: .env.example  auth.ts  package-lock.json  package.json  pnpm-lock.yaml
client/app/: layout.tsx
client/app/(chat)/: layout.tsx
client/app/api/chat/: route.ts
client/components/: chat-list.tsx  chat-panel.tsx  chat.tsx  empty-screen.tsx  header.tsx  persona-item.tsx  persona-items.tsx  persona-list.tsx  persona-sidebar.tsx  prompt-form.tsx  sidebar-desktop.tsx
client/components/ui/: icons.tsx
server/: .env.example  Dockerfile  fly.toml  main.py  pyproject.toml
server/agents/: vocode.py
server/models/: persona.py
server/tests/: mock_personas.csv
