[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ehsaan <ehsaaniqbal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.0"
vocode = "^0.1.111"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
